1999-07-08  Tim Jenness  <timj@jach.hawaii.edu>

	* Inst/SCUBA.pm (start_algorithm_engines): Add ndf2fits

1999-07-02  Tim Jenness  <timj@jach.hawaii.edu>

	* SCUBA.pm: Change typo from polpack_reg to ccdpack_reg

1999-06-02  Tim Jenness  <timj@jach.hawaii.edu>

	* Frame/UKIRT.pm (findrecipe): Fix documentation typo.
	(stripfname): Make this generic.

	* Frame/UFTI.pm (findrecipe): Fix recipe method so that it matches 
	new format. Use base constructor. Remove stripfname.

	* Frame/IRCAM.pm (new): Remove stripfname method.

1999-06-01  Tim Jenness  <timj@jach.hawaii.edu>

	* Display/KAPVIEW.pm (config_regions): Configure regions once and
	then select them as required.

1999-05-30  Tim Jenness  <timj@jach.hawaii.edu>

	* Display.pm (display_data): Allow for the display definition not
	to be read if using supplied values.

1999-05-25  Tim Jenness  <timj@jach.hawaii.edu>

	* Print.pm (orac_read): Create readline interface on request
	rather than at start.

	* TempFile.pm (Initialise): Remove dots from tempnames.

1999-05-20  Tim Jenness  <timj@jach.hawaii.edu>

	* Group/UFTI.pm: Fix readhdr so that it doesnt use header.

1999-05-12  Tim Jenness  <timj@jach.hawaii.edu>

	* Basic.pm (orac_setup_display): Check for $ENV{DISPLAY} 

	* Calib.pm: Reorganize documentation.

1999-05-11  Tim Jenness  <timj@jach.hawaii.edu>

	* TempFile.pm: Created.

	* Basic.pm: use ORAC::TempFile and extend documentation on
	orac_execute_recipe 

	* Index.pm: Tidy documentation and constructor

	* Frame.pm (new): Allow base class to be used by sub-classes

	* Frame/JCMT.pm (new): Use the generic base class constructor

1999-05-10  Tim Jenness  <timj@jach.hawaii.edu>

	* Frame/MichTemp.pm: Major documentation update. Put all methods into
	alphabetical order.

	* Frame/UKIRT.pm: Major documentation update. Put all methods into
	alphabetical order. Remove header/uheader methods.

	* Frame/JCMT.pm: Major documentation update. Put all methods into