@@ -1,3 +1,7 @@
+1999-07-26  Tim Jenness  <timj@jach.hawaii.edu>
+
+	* Basic.pm: Add LWP::Simple
+
 1999-07-08  Tim Jenness  <timj@jach.hawaii.edu>
 
 	* Inst/SCUBA.pm (start_algorithm_engines): Add ndf2fits
